# 2023-autumn-ab-python-hw-13-redfox193

./: .env  docker-compose.yml  pyproject.toml
app/: api.py  main.py  settings.py  test.py  util.py
app/db/: crud.py  database.py  models.py  schemas.py
pgdata/: postmaster.pid
pgdata/base/16384/: 1247  1249  1259  16433  16435  16441  16442  16444  16446  16448  16454  16455  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002
pgdata/global/: pg_control
pgdata/pg_stat_tmp/: global.stat
pgdata/pg_xact/: 0000
