[tool.poetry]
name = "2023-autumn-ab-python-hw-13-redfox193"
version = "0.1.0"
description = ""
authors = ["redfox193 <cer2005dima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.25.0"
python-dotenv = "1.0.0"
psycopg2 = "2.9.9"
pydantic = "2.5.2"
passlib = "1.7.4"
pydantic-settings = "2.1.0"
bcrypt = "4.1.2"
http-exceptions = "0.2.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
